# synthsonic

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/001-mb-kdecopulannpdf-examples/: correlated_data.sv  gridsearch_asia.ipynb  kde_benchmark.ipynb  kde_benchmark_presentation.ipynb  kde_categorical.ipynb  kdecopulannpdf_benchmark_sdgym.ipynb  kdecopulannpdf_categorical.ipynb  kdecopulannpdf_categorical_sdgym.ipynb  kdecopulannpdf_example.ipynb  kdecopulannpdf_gridsearch.ipynb  kdecopulannpdf_sdgym.ipynb  kdecopulannpdf_unittest_example.ipynb
notebooks/002-mb-bn_reweighting-examples/: alarm_categorical_variables_bayesian_network_reweighted.ipynb  alarm_categorical_variables_bayesian_network_reweighted_stat_errors.ipynb  portoseguro_categorical_variables_bayesian_network_reweighted.ipynb
notebooks/003-mb-bn_structure_check_using_phik-examples/: alarm_categorical_variables_bayesian_network_check_phik.ipynb
notebooks/003-porto-seguro-safe-driver-prediction/: Categorical.py  Porto-seguro.ipynb
notebooks/experiments/: 1_leaderboard.py  1_leaderboard.sh  1_leaderboard_tables.py  1_leaderboard_tables_agg.py  2_ablation_analysis.py  2_ablation_analysis.sh  2_ablation_analysis_tables.py  3_efficiency.py  3_efficiency_cpu.sh  3_efficiency_gpu.sh  3_efficiency_tables.py  3_efficiency_tables_agg.py  Readme.md  synthsonic_synth.py
notebooks/leaderboard/: adult_all_variables.ipynb  adult_categorical_variables_bayesian_network_reweighted.ipynb  alarm_all_variables.ipynb  asia_all_variables.ipynb  asia_categorical_variables_bayesian_network_reweighted.ipynb  census_all_variables.ipynb  census_categorical_variables_bayesian_network_reweighted.ipynb  census_numeric_variables.ipynb  grid.ipynb  (+16 more)
paper/: paper.bib  paper.tex
service/: .gitignore  Makefile  README.md  docker-compose.yml
(+50 files in other folders)
